fixed contact spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,11 +300,6 @@ section {
 }
 
 .contact-info div {
-  width: 410px;
-  display: inline-block;
-  vertical-align: top;
-  text-align: left;
-  margin: 30px 0 0 60px;
   color: white;
 }
 
